test/type_inference/negative/type_args3.impala
fn f[A](a: A, g: fn(fn(A)->A)->()) -> () {
}

fn main() -> () {
    f(true, |x: fn(int32)->int32| -> () {})
}
