test/type_inference/negative/type_args3.output
type_args3.impala:5 col 14 - 32: error: could not unify types: expected 'fn(bool, fn(bool))' but found 'fn(int32, fn(int32))'.
